<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/branchNameRes"
        android:hint="@string/branchName"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateRes"
        android:hint="@string/dateRes"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeRes"
        android:text="@string/timeRes"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numberRes"
        android:text="@string/numberRes"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoRes"
        android:layout_marginTop="50dp"
        android:text="@string/infoRes"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalendar"
        android:text="@string/btnCalendar"
        android:background="@color/mint_green"
        android:layout_marginTop="100dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:text="@string/btnBack"
        android:background="@color/mint_green"
        android:layout_marginTop="10dp"/>

</LinearLayout>