<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="BranchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblBranchName"
            android:textSize="22dp"
            android:textAlignment="center" />

        <TextView
            android:text="Branch adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblBranchAdress"
            android:textSize="18sp"
            android:textAlignment="center" />

        <TextView
            android:text="Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDate"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblStartTime"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="PersonCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPersonCount"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/resAnn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:background="@color/mint_green"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getMessages"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="#000"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/lvMessages"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp">

        </ListView>

        <TextView
            android:id="@+id/empty"
            android:text="@string/emptyMessages"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPostMessage"
            android:background="@color/mint_green"
            android:layout_marginTop="10dp"
            android:text="@string/postMessage"/>

    </LinearLayout>



</ScrollView>