<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/resBranchName"
            android:id="@+id/resName"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Branch name"
            android:id="@+id/txtBranchName"
            android:layout_weight="0.5"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resTime"
            android:text="@string/resBranchAdress"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Branch Adress"
            android:id="@+id/txtBranchAdress"
            android:layout_weight="0.5"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resDate"
            android:text="@string/resDate"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Res Date"
            android:id="@+id/txtResDate"
            android:layout_weight="0.5"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resAmount"
            android:text="@string/resAmount"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Amount res"
            android:id="@+id/txtResAmount"
            android:layout_weight="0.5"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/lblHiddenId"
        android:visibility="visible" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resId"
            android:text="ResId"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Res id"
            android:id="@+id/txtResId"
            android:layout_weight="0.5"
            />

    </LinearLayout>
-->

</LinearLayout>